MINOR: Align JMH JVM settings with production default JVM settings
Fixes #7534